--- a/RIF-Loader/RIF-Loader.vcxproj
+++ b/RIF-Loader/RIF-Loader.vcxproj
@@ -131,13 +131,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="avp_checker.c" />
     <ClCompile Include="avp_io_win.c" />
     <ClCompile Include="avp_linked_list.c" />
+    <ClCompile Include="avp_rif.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="avp_checker.h" />
+    <ClInclude Include="avp_error.h" />
     <ClInclude Include="avp_io.h" />
     <ClInclude Include="avp_linked_list.h" />
+    <ClInclude Include="avp_rif.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
