--- a/RIF-Loader-CPP/RIF-Loader-CPP.vcxproj
+++ b/RIF-Loader-CPP/RIF-Loader-CPP.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ea0dc0ae-5933-4bd0-a17e-c3a22ce7cfa6}</ProjectGuid>
-    <RootNamespace>avpassetsuite</RootNamespace>
+    <ProjectGuid>{caa2dbb2-4b26-4d0a-aa64-8c1569500aeb}</ProjectGuid>
+    <RootNamespace>RIFLoaderCPP</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>FFL-Loader</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,13 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ffl_stdio.cpp" />
+    <ClCompile Include="avp_rif.cpp" />
+    <ClCompile Include="avp_rif_chunks.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="ffl_sound.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ffl_sound.h" />
-    <ClInclude Include="ffl_stdio.h" />
+    <ClInclude Include="avp_rif.h" />
+    <ClInclude Include="avp_rif_chunks.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
