rif header read

--- a/RIF-Loader-CPP/RIF-Loader-CPP.vcxproj.filters
+++ b/RIF-Loader-CPP/RIF-Loader-CPP.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="avp_rif_chunks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="avp_utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="avp_rif.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="avp_rif_chunks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="avp_utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
