--- a/RIF-Loader-CPP/RIF-Loader-CPP.vcxproj
+++ b/RIF-Loader-CPP/RIF-Loader-CPP.vcxproj
@@ -129,11 +129,13 @@
   <ItemGroup>
     <ClCompile Include="avp_rif.cpp" />
     <ClCompile Include="avp_rif_chunks.cpp" />
+    <ClCompile Include="avp_utils.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="avp_rif.h" />
     <ClInclude Include="avp_rif_chunks.h" />
+    <ClInclude Include="avp_utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
