--- a/RIF-Loader-CPP/RIF-Loader-CPP.vcxproj.filters
+++ b/RIF-Loader-CPP/RIF-Loader-CPP.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="avp_utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="avp_huffman.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="avp_rif.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="avp_utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="avp_huffman.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
